--- a/drivers/gpu/drm/panel/msm8953-generated/Kconfig
+++ b/drivers/gpu/drm/panel/msm8953-generated/Kconfig
@@ -57,8 +57,8 @@ config DRM_PANEL_TIANMA_622_V0
 	tristate "Tianma 622 V0"
 	default DRM_PANEL_MSM8953_GENERATED
 
-config DRM_PANEL_TIANMA_TL052VDPX02
-	tristate "Tianma TL052VDPX02"
+config DRM_PANEL_TIANMA_TL052VDXP02
+	tristate "Tianma TL052VDXP02"
 	default DRM_PANEL_MSM8953_GENERATED
 
 config DRM_PANEL_XIAOMI_AUO_R61322
